# dbt-airflow-research

./: .gitignore  .pre-commit-config.yaml  dbt_manifest_parser.py  pyproject.toml
src/: manifest_parser.py  schedule_resolver.py
tests/: manifest.json
