[tool.poetry]
name = "dbt-manifest-parser"
version = "0.1.0"
description = ""
authors = ["Vsevolod Bazhan <work@bazhan.one>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
