[tool.poetry]
name = "dbt-manifest-parser"
version = "0.1.0"
description = ""
authors = ["Vsevolod Bazhan <work@bazhan.one>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
attrs = "^24.2.0"
cattrs = "^24.1.2"
orjson = "^3.10.9"

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.ruff]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
